@@ -22,6 +22,7 @@ add_definitions (-DVERSION=\"${VERSION}\" -DTIMESTAMP=\"${TIMESTAMP}\")
 if (WIN32)
     set (BINDEST .)
     set (LIBDEST .)
+	set (MANDEST man)
     set (SHAREDEST .)
 else (WIN32)
     set (BINDEST bin)
@@ -51,3 +52,4 @@ endif (NOT HAVE_STDINT_H)
 add_subdirectory(lib)
 add_subdirectory(client)
 add_subdirectory(src)
+add_subdirectory(man)
